# ChangeLog for media-sound/rhythmbox
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.171 2010/02/17 22:58:40 eva Exp $

  17 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/rhythmbox-0.11.5-libmtp-0.3.0-API.patch,
  -rhythmbox-0.11.6-r1.ebuild, rhythmbox-0.12.5-r2.ebuild,
  rhythmbox-0.12.6.ebuild:
  Add libsoup-gnome dependency, it is needed at build time, bug #302670.
  Raise gnome-doc-utils dependency to an appropriate version, bug #303515.

  11 Jan 2010; Romain Perier <mrpouet@gentoo.org> rhythmbox-0.12.6.ebuild:
  Drop seamonkey dep necessary for seamonkey p.mask removal, and drop
  firefox dep since only xulrunner must be used for xul apps, bug #300448.

  05 Jan 2010; nixnut <nixnut@gentoo.org> rhythmbox-0.12.5-r2.ebuild:
  ppc stable #234938

  30 Dec 2009; Raúl Porcel <armin76@gentoo.org> rhythmbox-0.12.5-r2.ebuild:
  sparc stable wrt #234938

  18 Dec 2009; Pacho Ramos <pacho@gentoo.org> rhythmbox-0.12.5-r2.ebuild:
  amd64 stable, bug 234938

*rhythmbox-0.12.6 (10 Dec 2009)

  10 Dec 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -rhythmbox-0.12.3-r2.ebuild, -files/rhythmbox-0.12.3-lastfm.patch,
  -files/rhythmbox-0.12.3-sigsegv-no-saveable-types.patch,
  -rhythmbox-0.12.4.ebuild, +rhythmbox-0.12.6.ebuild:
  Version bump. Crossfading backend fixes, new context panel plugin, MTP
  enhancements and other bug fixes.

  09 Dec 2009; Brent Baude <ranger@gentoo.org> rhythmbox-0.12.5-r2.ebuild:
  Marking rhythmbox-0.12.5-r2 ppc64 for bug 234938

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  rhythmbox-0.12.5-r2.ebuild:
  stable x86, bug 234938

  08 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  rhythmbox-0.12.5-r2.ebuild:
  add dependency on dev-libs/libxml2 as reported by Derk W te Bokkel on bug
  234938

*rhythmbox-0.12.5-r2 (01 Nov 2009)

  01 Nov 2009; Nirbheek Chauhan <nirbheek@gentoo.org>