@@ -4,14 +4,16 @@ Hash: SHA1
 AUX rhythmbox-0.12.5-fix-daap-plugin-linking.patch 714 RMD160 f41f995764b8ac60172b8e8e6c1a9face9d3e408 SHA1 2ebd320ef650c9fe6dd06531afc697399a071ed6 SHA256 4617073fc7e275680b8ad3334009dbcf707725294f499df4912be83c6abbb2cd
 DIST rhythmbox-0.12.5.tar.bz2 5123204 RMD160 5286cda2e457d21627a8fe2392c85504bcd254b7 SHA1 b41bbb4e7e8f2dc64122ff6a0b334478a0cef42b SHA256 b26c45a715502d3b4d47bf532078bdf3dbed68c1cb68c61d8995a349dd488cd1
 DIST rhythmbox-0.12.6.tar.bz2 5202025 RMD160 cf860b1a42975d4dfea09b5c265bda297d18a7b9 SHA1 f1ba375329471ec47475a4b0ce3e8bba430a537b SHA256 ddffa5b7e0e0fe81044354998fd91a58d4ff526746b17a6b638e0e8ea1ac9684
+DIST rhythmbox-0.12.7.tar.bz2 5224160 RMD160 02815a3503c195fa00f65c03e56e0d686a25e118 SHA1 a793132c49f9a24053fb9d05514b380c4dd62f7c SHA256 4ab28b93b2e9d7bc9338194ba6e01549362fdd5b0cf2806da091fbfb2c2a8362
 EBUILD rhythmbox-0.12.5-r2.ebuild 4811 RMD160 552c4c989441bbb0b91bbe90ceb070d4309a226f SHA1 9e53e7bf34459b064bc8a3e06ca221445262f086 SHA256 7fb752710dd1adb756800c7147f637761a00ad9949e7e92fb13847c484a76cf4
 EBUILD rhythmbox-0.12.6.ebuild 4536 RMD160 5d9e62a20c280698d2e005b07165486309b57cef SHA1 496a67461548572885cea231b617936a08f2bbb6 SHA256 4e3defda21fbc969c494ef19157fae23683daaa7647d553488959cf07e5815a4
-MISC ChangeLog 26387 RMD160 ba897b705a5d2eab9cd7ca69c3464dc8fc4d5583 SHA1 271dd82576f9fe73769555ff27dc78ee8fe8095b SHA256 d048d20fd58db5983a2f313f30c06e92bb5ca46df55c4bf0a319c29c1fa98664
-MISC metadata.xml 554 RMD160 373e24d2bc93d4647d0f14dc82481fa0feac5556 SHA1 71f81029792041f81df9e4ffad370883e1c46345 SHA256 b5a507f70697165fe10664154a508a9249945f50289b98b31e7693eedc2cad5e
+EBUILD rhythmbox-0.12.7.ebuild 4934 RMD160 0c6344c19a12cc4cdb9ef94eb340c2e81bc26f80 SHA1 f12f4544550c52cc15a5e5b10ebacb67d97e75c0 SHA256 5403ac6798bbb68292a8bcbddb5d27d29abc115a97e955e336f121f9327ad9e5
+MISC ChangeLog 26617 RMD160 4a910ac75042740fe31b455c3c71f434eda5fa72 SHA1 12152531fff31ac84b0cad4fde04daafbe236dd8 SHA256 486da3f4693c2c8c9bc7191c1f016c1a43f661ad7bab0a32faf77665e4e6a6d8
+MISC metadata.xml 611 RMD160 a537fe9b35e6e61fed13baf0d308d7cfd89c7d12 SHA1 4a124b2e09a3787b5c0e8c23ca03c52e1499505f SHA256 d4aeb1c1d55bef78b74c25fdb1b5afae23af8627213bed498df78a54a07eb721
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt8dKYACgkQ1fmVwcYIWAa3BACgsnvi6H6Fl7phzP3L1siBUDrt
-SaYAn3M294ArjEZXvJn3/JCB0m3sg07b
-=u/AA
+iEYEARECAAYFAkuMTmcACgkQ1fmVwcYIWAbFnACg3t9eNbkk5roxJFPgwR6TKLRZ
+SIwAoNpzly3M4RiDri8qn4MpEwfeekeR
+=KvME
 -----END PGP SIGNATURE-----
