@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/rhythmbox
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.171 2010/02/17 22:58:40 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.172 2010/03/01 23:31:31 eva Exp $
+
+*rhythmbox-0.12.7 (01 Mar 2010)
+
+  01 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
+  +rhythmbox-0.12.7.ebuild, metadata.xml:
+  Version bump. Lots of fixes, add rdepend for context panel plugin. Kill
+  *.la files for plugins.
 
   17 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
   -files/rhythmbox-0.11.5-libmtp-0.3.0-API.patch,
